[fix] 크롤링 SSRF/XXE 방어 강화
docs/03-analysis/admin-crawling-management.md §1.2/§1.3에서 발견된 P1 이슈
(상세페이지 재요청 URL SSRF 방어 부재, RSS XML 파싱 XXE 방어 불완전) 대응.

- validateSourceUrl: 호스트를 InetAddress.getAllByName()으로 전부 resolve해
  루프백/링크로컬/사설망/미지정/멀티캐스트 주소 거부
- fetchRssDocument/fetchArticleDetail: 자동 리다이렉트 비활성화 후
  3xx Location을 재검증(validateSourceUrl)하며 수동 추적, 최대 3회 제한
- fetchRssDocument: DocumentBuilderFactory에 disallow-doctype-decl,
  external-general/parameter-entities 기능 플래그 추가로 XXE 전면 차단

Codex 구현, Claude 독립 검증(git diff 대조 + ./gradlew test 74건 통과).

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>